--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </button>
         </div>
     </div>
-    <script src="public/index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 <html>
